--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,10 @@
 <h1> HELLO DRINK UME SHU</h1>
 
-<%= @tasks.title  %>
+<%= @task.title  %>
+
+<%= link_to "Delete",
+  task_path(@task),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+ %>
+
+<%= link_to "Return Home",tasks_path, class: "btn btn-primary" %>
